apps/keycloak/ingresses/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: keycloak.iam-demo.test
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - keycloak.iam-demo.test
    secretName: iam-demo-keycloak-tls
